@@ -241,7 +241,6 @@
               <fork>true</fork>
               <compilerArgs combine.children="append">
                 <!-- required by javac detection logic in immutables -->
-                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
                 <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
               </compilerArgs>
             </configuration>
